# rosettia-chanka

./: .gitignore  AGENTS.MD  README.md  findingsEstefania.md  main.py  pyproject.toml
data/: amnlp_normalized_gold.jsonl  normalizer_gold.jsonl  normalizer_gold_augmented.jsonl  normalizer_gold_filtered.jsonl  normalizer_gold_summary.json  normalizer_gold_v44.jsonl  normalizer_gold_v45.jsonl  normalizer_precision_holdout.txt  normalizer_rule_focused.jsonl
docs/: dataset_building.md  source_inventory_chanka.md  unsloth_sft.md
scripts/: build_chanka_expanded_v30.py  build_chanka_expanded_v31.py  build_confident_mbr_pseudo_labels.py  build_contextual_terminology_jsonl.py  build_frontier_thinking_sft_jsonl.py  build_meta_verifier_from_self_outputs.py  build_mixed_sft_jsonl.py  build_oracle_preference_pairs.py  build_self_verifiable_translation_data.py  build_terminology_oversampled_jsonl.py  build_terminology_pair_jsonl.py  check_deepseek_frontier_paid_gate.py  check_deepseekmath_cycle_manifest.py  check_frontier_prompt_preview.py  check_frontier_selection_report.py  check_frontier_thinking_data.py  check_meta_hardcase_data.py  check_policy_iteration_metrics.py  ds_engineered_production.py  ds_flavors.py  eval_americasnlp_2021.py  eval_americasnlp_2021_vllm.py  eval_broad_lora_ckpt.py  evaluate_candidate_reranker.py  evaluate_gspo_checkpoint.py  evaluate_pairwise_candidate_reranker.py  evaluate_translation_baseline.py  export_unsloth_merged_model.py  extract_deepseekmath_manifest_hardcases.py  extract_manual_glossary.py  extract_manual_parallel_corpus.py  (+51 more)
(+155 files in other folders)
