[project]
name = "rosettia"
version = "0.1.0"
description = "Chanka Quechua dataset and translation tooling for the SomosNLP 2026 hackathon"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.4.1,<4.4.0",
    "huggingface-hub>=0.34.0",
    "mwparserfromhell>=0.7.2",
    "polars>=1.40.1",
    "pyarrow>=24.0.0",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.12.2",
    "sacrebleu>=2.5.1",
    "wikitextparser>=0.56.4",
]
